# blender

./: pyproject.toml
src/api/: cli.py
src/blender/: __init__.py  _blending.py
tests/: settings.py  test_api.py  test_blender.py
tests/benchmark/: test_algorithms_benchmark.py
